--- a/src/GameBundle/Resources/views/Admin/user_manager.html.twig
+++ b/src/GameBundle/Resources/views/Admin/user_manager.html.twig
@@ -1,6 +1,7 @@
 {# src/GameBundle/Resources/views/Default/select_gamer.html.twig #}
 
 {% extends "GameBundle::layout.html.twig" %}
+{% set adminUser = true %}
 
 {% block title %}{{ parent() }} - Index{% endblock %}
 
