--- a/src/UserBundle/Resources/views/Default/form_user.html.twig
+++ b/src/UserBundle/Resources/views/Default/form_user.html.twig
@@ -1,6 +1,7 @@
 {# src/UserBundle/Resources/views/Default/form.html.twig #}
 
 {% extends "UserBundle::layout.html.twig" %}
+{% set settings = true %}
 
 {% block title %}{{ parent() }} - {{ titleTab }} {% endblock %}
 
