--- a/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
@@ -1,6 +1,7 @@
 {# src/UserBundle/Resources/views/Gamer/select_gamer.html.twig #}
 
 {% extends "GameBundle::layout.html.twig" %}
+{% set select_gamer = true %}
 
 {% block title %}{{ parent() }} - {{ titleTab }}{% endblock %}
 
