--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -1,6 +1,7 @@
 {# src/GameBundle/Resources/views/Default/index.html.twig #}
 
 {% extends "GameBundle::layout.html.twig" %}
+{% set formElt = true %}
 
 {% block title %}{{ parent() }} - Index{% endblock %}
 
