--- a/src/UserBundle/Resources/views/Gamer/admin_gamers.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/admin_gamers.html.twig
@@ -1,6 +1,7 @@
 {# src/GameBundle/Resources/views/Default/select_gamer.html.twig #}
 
 {% extends "GameBundle::layout.html.twig" %}
+{% set adminGamers = true %}
 
 {% block title %}{{ parent() }} - Index{% endblock %}
 
