--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -19,6 +19,8 @@
     {% endfor %}
 
     <h3>{{ title }}</h3>
+
+    <p>{{ gamer.username }} a été sélectionné.</p>
     
         <table class="board">
             <tr class="borderTop">
