--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -24,6 +24,16 @@
         <p>{{ gamer.username }} a été sélectionné.</p>
     {% endfor %}
 
+    <div class="dé">
+        <img class="un" src="{{ asset('bundles/GameBundle/images/un.png') }}" alt="numéro un" />
+        <img class="deux" src="{{ asset('bundles/GameBundle/images/deux.png') }}" alt="numéro deux" />
+        <img class="trois" src="{{ asset('bundles/GameBundle/images/trois.png') }}" alt="numéro trois" />
+        <img class="quatre" src="{{ asset('bundles/GameBundle/images/quatre.png') }}" alt="numéro quatre" />
+        <img class="cinq" src="{{ asset('bundles/GameBundle/images/cinq.png') }}" alt="numéro cinq" />
+        <img class="six" src="{{ asset('bundles/GameBundle/images/six.png') }}" alt="numéro six" />
+    </div>
+    <button>Jetez les dés !</button>
+
         <table class="board">
             <tr class="borderTop">
                 <td class="jaune borderLeft">22</td>
@@ -109,5 +119,42 @@
             </tr>
         </table>
 
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript">
+    $(function () {
+        var minNumber = 1;
+        var maxNumber = 6;
+        var dés = $('.dé');
+
+        dés.children().hide();
+        $('button').on('click', function(e) {
+            e.preventDefault();
+            var randomNumber = Math.floor(Math.random() * maxNumber) + minNumber;
+            dés.children().hide();
+
+            switch (randomNumber) {
+                case 1:
+                    $('.dé .un').show();
+                    break;
+                case 2:
+                    $('.dé .deux').show();
+                    break;
+                case 3:
+                    $('.dé .trois').show();
+                    break;
+                case 4:
+                    $('.dé .quatre').show();
+                    break;    
+                case 5:
+                    $('.dé .cinq').show();
+                    break;
+                case 6:
+                    $('.dé .six').show();
+                    break;
+            }
+        })
+    });
+    </script>
+
 {% endblock %}
- 
